# sales-assistant-agent

./: README.md  pyproject.toml
app/: main.py
app/agents/: calendar_agent.py  outreach_agent.py
app/api/v1/: brainstorm.py  chat.py  etl.py  health.py
app/core/: config.py  logging.py
app/databases/: redis_client.py
app/etl/: users_etl.py
app/etl/data/: user_profiles_seed.json
app/mcp/: calendar_client.py
app/prompts/: calendar_agent.py  outreach_agent.py  supervisor.py
app/schemas/: brainstorm.py  chat_message.py
app/schemas/structured_outputs/: outreach.py
app/services/: brainstorm_service.py  chat_service.py  etl_service.py
app/utils/: outreach_utils.py
